smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-structure-member-names.errors
[ERROR] com.foo#Struct: Parse error at line 7, column 8 near `: `: Duplicate member of com.foo#Struct: 'foo' | Model
