smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-structure-member-names.smithy
$version: "2.0"

namespace com.foo

structure Struct {
    foo: String,
    foo: String,
}
